--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -10,11 +10,11 @@ title = "Language Technology Group"
 
 # The URL of your site.
 # End your URL with a `/` trailing slash, e.g. `https://example.com/`.
-baseurl = "/"
+baseurl = "https://ltgroup.netlify.app/"
 
 # Enter a copyright notice to display in the site footer.
 # To display a copyright symbol, type `&copy;`. For current year, type `{year}`.
-copyright = ""
+copyright = "&copy 2020 Marcos Zampieri"
 
 ############################
 ## Advanced options below ##
